refactor: update routes, schema, and files - Update route for article - Update user schema - Update admin file - Replace first and last name with name in all files
